Fix on mobile menu icon

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -76,8 +76,6 @@
   
   .menu-icon {
     display: none;
-    padding-top: 2px;
-    padding-right: 3%;
   }
   
   @media screen and (max-width: 960px) {
@@ -91,7 +89,7 @@
       width: 100%;
       height: 90vh;
       position: absolute;
-      top: 80px;
+      top: 60px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
@@ -130,7 +128,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      transform: translate(-100%, 60%);
+      transform: translate(-150%, 45%);
       font-size: 1.8rem;
       cursor: pointer;
     }
